--- a/animacions/soluciones-ca-actividad-fisica.html
+++ b/animacions/soluciones-ca-actividad-fisica.html
@@ -200,7 +200,7 @@
 								<li>És important la disponibilitat dels <strong>espais verds</strong> per realitzar activitat física de forma segura.</li>
 							</ul>
 						</p>
-						<p><strong>Aquestes mesures es recullen en aquest <a href="#">estudi</a> publicat a <em>The Lancet</em>, que analitza l'activitat física en 14 ciutats.</strong></p>
+						<p><strong>Aquestes mesures es recullen en aquest <a href="http://www.thelancet.com/pdfs/journals/lancet/PIIS0140-6736(15)01284-2.pdf" target="_blank">estudi</a> publicat a <em>The Lancet</em>, que analitza l'activitat física en 14 ciutats.</strong></p>
 					</div>
 				</div>
 			</div>
