--- a/animacions/soluciones-ca-ruido.html
+++ b/animacions/soluciones-ca-ruido.html
@@ -195,8 +195,8 @@
 					<div class="toggle-body-cont">
 						<p><strong>La planificació urbana pot tenir un paper important per disminuir els nivells de soroll i promoure estils de vida saludables:</strong>
 							<ul>
-								<li>Les poblacions de més de 100.000 habitants de la Unió Europea <a href="#">han de notificar</a> la contaminació acústica mitjançant <strong>mapes de soroll</strong> (a Barcelona, per exemple, el <a href="#">mapa</a> també està disponible per a la ciutadania, que pot comprovar el nivell de soroll del seu carrer).</li>
-								<li>També s'han de realitzar <a href="#">plans d'acció</a> <strong>per reduir el soroll a les zones més afectades.</strong> Algunes de les estratègies més freqüents són:
+								<li>Les poblacions de més de 100.000 habitants de la Unió Europea <a href="http://sicaweb.cedex.es/docs/leyes/Directiva-2002-49-CE-Evaluacion-gestion-ruido-ambiental.pdf" target="_blank">han de notificar</a> la contaminació acústica mitjançant <strong>mapes de soroll</strong> (a Barcelona, per exemple, el <a href="http://w20.bcn.cat/WebMapaAcustic/mapa_soroll.aspx" target="_blank">mapa</a> també està disponible per a la ciutadania, que pot comprovar el nivell de soroll del seu carrer).</li>
+								<li>També s'han de realitzar <a href="https://www.eea.europa.eu/themes/human/noise/sub-sections/noise-in-europe-updated-population-exposure/#figure-3-analysis-of-end-noise-action-plan-measures" target="_blank">plans d'acció</a> <strong>per reduir el soroll a les zones més afectades.</strong> Algunes de les estratègies més freqüents són:
 									<ul>
 										<li>L'ús de paviment sonoreductor a les calçades</li>
 										<li>El límit del volum de trànsit</li>
