--- a/animacions/soluciones-ca-temperatura.html
+++ b/animacions/soluciones-ca-temperatura.html
@@ -201,7 +201,7 @@
 								<li><strong>La reducció de la calor</strong> que es produeix per activitats humanes (calefacció, etc.) ajudarà també a reduir l'efecte de les illes de calor.</li>
 							</ul>
 						</p>
-						<p><strong>Hi ha diversos plans de mitigació, com la guia "<a href="#">"Reducció de les illes de calor urbanes: Compendi d'estratègies</a>"</strong> de l'Agència de Protecció Ambiental dels Estats Units.</p>
+						<p><strong>Hi ha diversos plans de mitigació, com la guia "<a href="https://www.epa.gov/sites/production/files/2017-05/documents/reducing_urban_heat_islands_ch_5.pdf" target="_blank">"Reducció de les illes de calor urbanes: Compendi d'estratègies</a>"</strong> de l'Agència de Protecció Ambiental dels Estats Units.</p>
 					</div>
 				</div>
 			</div>
