--- a/animacions/soluciones-ca.html
+++ b/animacions/soluciones-ca.html
@@ -220,8 +220,8 @@
 					<div class="toggle-body-cont">
 						<p><strong>La planificació urbana pot tenir un paper important per disminuir els nivells de soroll i promoure estils de vida saludables:</strong>
 							<ul>
-								<li>Les poblacions de més de 100.000 habitants de la Unió Europea <a href="#">han de notificar</a> la contaminació acústica mitjançant <strong>mapes de soroll</strong> (a Barcelona, per exemple, el <a href="#">mapa</a> també està disponible per a la ciutadania, que pot comprovar el nivell de soroll del seu carrer).</li>
-								<li>També s'han de realitzar <a href="#">plans d'acció</a> <strong>per reduir el soroll a les zones més afectades.</strong> Algunes de les estratègies més freqüents són:
+								<li>Les poblacions de més de 100.000 habitants de la Unió Europea <a href="http://sicaweb.cedex.es/docs/leyes/Directiva-2002-49-CE-Evaluacion-gestion-ruido-ambiental.pdf" target="_blank">han de notificar</a> la contaminació acústica mitjançant <strong>mapes de soroll</strong> (a Barcelona, per exemple, el <a href="http://w20.bcn.cat/WebMapaAcustic/mapa_soroll.aspx" target="_blank">mapa</a> també està disponible per a la ciutadania, que pot comprovar el nivell de soroll del seu carrer).</li>
+								<li>També s'han de realitzar <a href="https://www.eea.europa.eu/themes/human/noise/sub-sections/noise-in-europe-updated-population-exposure/#figure-3-analysis-of-end-noise-action-plan-measures" target="_blank">plans d'acció</a> <strong>per reduir el soroll a les zones més afectades.</strong> Algunes de les estratègies més freqüents són:
 									<ul>
 										<li>L'ús de paviment sonoreductor a les calçades</li>
 										<li>El límit del volum de trànsit</li>
@@ -253,7 +253,7 @@
 								<li>És important la disponibilitat dels <strong>espais verds</strong> per realitzar activitat física de forma segura.</li>
 							</ul>
 						</p>
-						<p><strong>Aquestes mesures es recullen en aquest <a href="#">estudi</a> publicat a <em>The Lancet</em>, que analitza l'activitat física en 14 ciutats.</strong></p>
+						<p><strong>Aquestes mesures es recullen en aquest <a href="http://www.thelancet.com/pdfs/journals/lancet/PIIS0140-6736(15)01284-2.pdf" target="_blank">estudi</a> publicat a <em>The Lancet</em>, que analitza l'activitat física en 14 ciutats.</strong></p>
 					</div>
 				</div>
 			</div>
@@ -277,7 +277,7 @@
 								<li><strong>La reducció de la calor</strong> que es produeix per activitats humanes (calefacció, etc.) ajudarà també a reduir l'efecte de les illes de calor.</li>
 							</ul>
 						</p>
-						<p><strong>Hi ha diversos plans de mitigació, com la guia "<a href="#">"Reducció de les illes de calor urbanes: Compendi d'estratègies</a>"</strong> de l'Agència de Protecció Ambiental dels Estats Units.</p>
+						<p><strong>Hi ha diversos plans de mitigació, com la guia "<a href="https://www.epa.gov/sites/production/files/2017-05/documents/reducing_urban_heat_islands_ch_5.pdf" target="_blank">"Reducció de les illes de calor urbanes: Compendi d'estratègies</a>"</strong> de l'Agència de Protecció Ambiental dels Estats Units.</p>
 					</div>
 				</div>
 			</div>
