--- a/animacions/soluciones-en-actividad-fisica.html
+++ b/animacions/soluciones-en-actividad-fisica.html
@@ -203,7 +203,7 @@
 								<li><strong>Green spaces </strong> are an important factor and provide a safe environment for physical activity.</li>
 							</ul>
 						</p>
-						<p><strong>All these measures are included in this <a href="#">study</a> published in <em>The Lancet</em>, , which analysed physical activity in 14 cities.</strong></p>
+						<p><strong>All these measures are included in this <a href="http://www.thelancet.com/pdfs/journals/lancet/PIIS0140-6736(15)01284-2.pdf" target="_blank">study</a> published in <em>The Lancet</em>, , which analysed physical activity in 14 cities.</strong></p>
 					</div>
 				</div>
 			</div>
