--- a/animacions/soluciones-en-ruido.html
+++ b/animacions/soluciones-en-ruido.html
@@ -198,9 +198,9 @@
 					<div class="toggle-body-cont">
 						<p><strong>Urban planning plays a key role in reducing noise levels and promoting healthy lifestyles:</strong>
 							<ul>
-								<li>Urban centres with a population of over 100,000 in the European Union <a href="#">are obliged to</a> provide
-information on noise pollution by means of <strong>noise maps</strong> (in Barcelona this <a href="#">mapa</a> is also available to the public, allowing them to check the noise levels on the street where they live).</li>
-								<li>Cities are also obliged to develop and implement <a href="#">action plans</a> <strong>to reduce noise levels in the areas most affected by the problem</strong>. Some of the most common strategies are:
+								<li>Urban centres with a population of over 100,000 in the European Union <a href="http://sicaweb.cedex.es/docs/leyes/Directiva-2002-49-CE-Evaluacion-gestion-ruido-ambiental.pdf" target="_blank">are obliged to</a> provide
+information on noise pollution by means of <strong>noise maps</strong> (in Barcelona this <a href="http://w20.bcn.cat/WebMapaAcustic/mapa_soroll.aspx?lang=en" target="_blank">mapa</a> is also available to the public, allowing them to check the noise levels on the street where they live).</li>
+								<li>Cities are also obliged to develop and implement <a href="https://www.eea.europa.eu/themes/human/noise/sub-sections/noise-in-europe-updated-population-exposure/#figure-3-analysis-of-end-noise-action-plan-measures" target="_blank">action plans</a> <strong>to reduce noise levels in the areas most affected by the problem</strong>. Some of the most common strategies are:
 									<ul>
 										<li>Low-noise road surfacing</li>
 										<li>Limiting traffic volumes</li>
