--- a/animacions/soluciones-en-temperatura.html
+++ b/animacions/soluciones-en-temperatura.html
@@ -204,7 +204,7 @@
 								<li><strong>Reducing heat</strong> associated with human activities (heating, etc.) to reduce the heat island effect.</li>
 							</ul>
 						</p>
-						<p><strong>Various mitigation plans have been proposed, such as the United States Environmental Protection Agency’s "<a href="#">Reducing Urban Heat Islands: Compendium of Strategies</a>"</strong></p>
+						<p><strong>Various mitigation plans have been proposed, such as the United States Environmental Protection Agency’s "<a href="https://www.epa.gov/sites/production/files/2017-05/documents/reducing_urban_heat_islands_ch_5.pdf" target="_blank">Reducing Urban Heat Islands: Compendium of Strategies</a>"</strong></p>
 					</div>
 				</div>
 			</div>
