--- a/animacions/soluciones-en.html
+++ b/animacions/soluciones-en.html
@@ -223,9 +223,9 @@
 					<div class="toggle-body-cont">
 						<p><strong>Urban planning plays a key role in reducing noise levels and promoting healthy lifestyles:</strong>
 							<ul>
-								<li>Urban centres with a population of over 100,000 in the European Union <a href="#">are obliged to</a> provide
-information on noise pollution by means of <strong>noise maps</strong> (in Barcelona this <a href="#">mapa</a> is also available to the public, allowing them to check the noise levels on the street where they live).</li>
-								<li>Cities are also obliged to develop and implement <a href="#">action plans</a> <strong>to reduce noise levels in the areas most affected by the problem</strong>. Some of the most common strategies are:
+								<li>Urban centres with a population of over 100,000 in the European Union <a href="http://sicaweb.cedex.es/docs/leyes/Directiva-2002-49-CE-Evaluacion-gestion-ruido-ambiental.pdf" target="_blank">are obliged to</a> provide
+information on noise pollution by means of <strong>noise maps</strong> (in Barcelona this <a href="http://w20.bcn.cat/WebMapaAcustic/mapa_soroll.aspx?lang=en" target="_blank">mapa</a> is also available to the public, allowing them to check the noise levels on the street where they live).</li>
+								<li>Cities are also obliged to develop and implement <a href="https://www.eea.europa.eu/themes/human/noise/sub-sections/noise-in-europe-updated-population-exposure/#figure-3-analysis-of-end-noise-action-plan-measures" target="_blank">action plans</a> <strong>to reduce noise levels in the areas most affected by the problem</strong>. Some of the most common strategies are:
 									<ul>
 										<li>Low-noise road surfacing</li>
 										<li>Limiting traffic volumes</li>
@@ -257,7 +257,7 @@ information on noise pollution by means of <strong>noise maps</strong> (in Barce
 								<li><strong>Green spaces </strong> are an important factor and provide a safe environment for physical activity.</li>
 							</ul>
 						</p>
-						<p><strong>All these measures are included in this <a href="#">study</a> published in <em>The Lancet</em>, , which analysed physical activity in 14 cities.</strong></p>
+						<p><strong>All these measures are included in this <a href="http://www.thelancet.com/pdfs/journals/lancet/PIIS0140-6736(15)01284-2.pdf" target="_blank">study</a> published in <em>The Lancet</em>, , which analysed physical activity in 14 cities.</strong></p>
 					</div>
 				</div>
 			</div>
@@ -281,7 +281,7 @@ information on noise pollution by means of <strong>noise maps</strong> (in Barce
 								<li><strong>Reducing heat</strong> associated with human activities (heating, etc.) to reduce the heat island effect.</li>
 							</ul>
 						</p>
-						<p><strong>Various mitigation plans have been proposed, such as the United States Environmental Protection Agency’s "<a href="#">Reducing Urban Heat Islands: Compendium of Strategies</a>"</strong></p>
+						<p><strong>Various mitigation plans have been proposed, such as the United States Environmental Protection Agency’s "<a href="https://www.epa.gov/sites/production/files/2017-05/documents/reducing_urban_heat_islands_ch_5.pdf" target="_blank">Reducing Urban Heat Islands: Compendium of Strategies</a>"</strong></p>
 					</div>
 				</div>
 			</div>
