--- a/animacions/soluciones-es-actividad-fisica.html
+++ b/animacions/soluciones-es-actividad-fisica.html
@@ -200,7 +200,7 @@
 								<li>Es importante la disponibilidad de <strong>espacios verdes</strong> para realizar actividad física de forma segura.</li>
 							</ul>
 						</p>
-						<p><strong>Estas medidas se recogen en este <a href="#">estudio</a> publicado en <em>The Lancet</em>, que analiza la actividad física en 14 ciudades.</strong></p>
+						<p><strong>Estas medidas se recogen en este <a href="http://www.thelancet.com/pdfs/journals/lancet/PIIS0140-6736(15)01284-2.pdf" target="_blank">estudio</a> publicado en <em>The Lancet</em>, que analiza la actividad física en 14 ciudades.</strong></p>
 					</div>
 				</div>
 			</div>
