--- a/animacions/soluciones-es-ruido.html
+++ b/animacions/soluciones-es-ruido.html
@@ -195,8 +195,8 @@
 					<div class="toggle-body-cont">
 						<p><strong>La planificación urbana puede desempeñar un papel importante para disminuir los niveles de ruido y promover estilos de vida saludables:</strong>
 							<ul>
-								<li>Las poblaciones de más de 100.000 habitantes de la Unión Europea <a href="#">deben notificar</a> la contaminación acústica mediante <strong>mapas de ruido</strong> (en Barcelona, por ejemplo, el <a href="#">mapa</a> también está disponible para la ciudadanía, que puede comprobar el nivel de ruido de su calle).</li>
-								<li>También se deben realizar <a href="#">planes de acción</a> <strong>para reducir el ruido en las zonas más afectadas.</strong> Algunas de las estrategias más frecuentes son:
+								<li>Las poblaciones de más de 100.000 habitantes de la Unión Europea <a href="http://sicaweb.cedex.es/docs/leyes/Directiva-2002-49-CE-Evaluacion-gestion-ruido-ambiental.pdf" target="_blank">deben notificar</a> la contaminación acústica mediante <strong>mapas de ruido</strong> (en Barcelona, por ejemplo, el <a href="http://w20.bcn.cat/WebMapaAcustic/mapa_soroll.aspx?lang=es" target="_blank">mapa</a> también está disponible para la ciudadanía, que puede comprobar el nivel de ruido de su calle).</li>
+								<li>También se deben realizar <a href="https://www.eea.europa.eu/themes/human/noise/sub-sections/noise-in-europe-updated-population-exposure/#figure-3-analysis-of-end-noise-action-plan-measures" target="_blank">planes de acción</a> <strong>para reducir el ruido en las zonas más afectadas.</strong> Algunas de las estrategias más frecuentes son:
 									<ul>
 										<li>El uso de pavimento sonoreductor en las calzadas</li>
 										<li>El límite del volumen de tráfico</li>
