--- a/animacions/soluciones-es-temperatura.html
+++ b/animacions/soluciones-es-temperatura.html
@@ -201,7 +201,7 @@
 								<li><strong>La reducción del calor</strong> que se produce por actividades humanas (calefacción, etc.) ayudará también a reducir el efecto de las islas de calor.</li>
 							</ul>
 						</p>
-						<p><strong>Hay diversos planes de mitigación, como la guía "<a href="#">Reducción de las islas de calor urbanas: Compendio de estrategias</a>"</strong> de la Agencia de Protección Ambiental de los Estados Unidos.</p>
+						<p><strong>Hay diversos planes de mitigación, como la guía "<a href="https://www.epa.gov/sites/production/files/2017-05/documents/reducing_urban_heat_islands_ch_5.pdf" target="_blank">Reducción de las islas de calor urbanas: Compendio de estrategias</a>"</strong> de la Agencia de Protección Ambiental de los Estados Unidos.</p>
 					</div>
 				</div>
 			</div>
