--- a/animacions/soluciones-es.html
+++ b/animacions/soluciones-es.html
@@ -220,8 +220,8 @@
 					<div class="toggle-body-cont">
 						<p><strong>La planificación urbana puede desempeñar un papel importante para disminuir los niveles de ruido y promover estilos de vida saludables:</strong>
 							<ul>
-								<li>Las poblaciones de más de 100.000 habitantes de la Unión Europea <a href="#">deben notificar</a> la contaminación acústica mediante <strong>mapas de ruido</strong> (en Barcelona, por ejemplo, el <a href="#">mapa</a> también está disponible para la ciudadanía, que puede comprobar el nivel de ruido de su calle).</li>
-								<li>También se deben realizar <a href="#">planes de acción</a> <strong>para reducir el ruido en las zonas más afectadas.</strong> Algunas de las estrategias más frecuentes son:
+								<li>Las poblaciones de más de 100.000 habitantes de la Unión Europea <a href="http://sicaweb.cedex.es/docs/leyes/Directiva-2002-49-CE-Evaluacion-gestion-ruido-ambiental.pdf" target="_blank">deben notificar</a> la contaminación acústica mediante <strong>mapas de ruido</strong> (en Barcelona, por ejemplo, el <a href="http://w20.bcn.cat/WebMapaAcustic/mapa_soroll.aspx?lang=es" target="_blank">mapa</a> también está disponible para la ciudadanía, que puede comprobar el nivel de ruido de su calle).</li>
+								<li>También se deben realizar <a href="https://www.eea.europa.eu/themes/human/noise/sub-sections/noise-in-europe-updated-population-exposure/#figure-3-analysis-of-end-noise-action-plan-measures" target="_blank">planes de acción</a> <strong>para reducir el ruido en las zonas más afectadas.</strong> Algunas de las estrategias más frecuentes son:
 									<ul>
 										<li>El uso de pavimento sonoreductor en las calzadas</li>
 										<li>El límite del volumen de tráfico</li>
@@ -253,7 +253,7 @@
 								<li>Es importante la disponibilidad de <strong>espacios verdes</strong> para realizar actividad física de forma segura.</li>
 							</ul>
 						</p>
-						<p><strong>Estas medidas se recogen en este <a href="#">estudio</a> publicado en <em>The Lancet</em>, que analiza la actividad física en 14 ciudades.</strong></p>
+						<p><strong>Estas medidas se recogen en este <a href="http://www.thelancet.com/pdfs/journals/lancet/PIIS0140-6736(15)01284-2.pdf" target="_blank">estudio</a> publicado en <em>The Lancet</em>, que analiza la actividad física en 14 ciudades.</strong></p>
 					</div>
 				</div>
 			</div>
@@ -277,7 +277,7 @@
 								<li><strong>La reducción del calor</strong> que se produce por actividades humanas (calefacción, etc.) ayudará también a reducir el efecto de las islas de calor.</li>
 							</ul>
 						</p>
-						<p><strong>Hay diversos planes de mitigación, como la guía "<a href="#">Reducción de las islas de calor urbanas: Compendio de estrategias</a>"</strong> de la Agencia de Protección Ambiental de los Estados Unidos.</p>
+						<p><strong>Hay diversos planes de mitigación, como la guía "<a href="https://www.epa.gov/sites/production/files/2017-05/documents/reducing_urban_heat_islands_ch_5.pdf" target="_blank">Reducción de las islas de calor urbanas: Compendio de estrategias</a>"</strong> de la Agencia de Protección Ambiental de los Estados Unidos.</p>
 					</div>
 				</div>
 			</div>
